welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:20: error: value lenght is not a member of Array[java.awt.Color]
      setCouleurBrosse(T((j+me+1) % T.lenght))
                                      ^